# pdum_aiui

./: .copier-answers.yml  .envrc  .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  aiui  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts  vitest.e2e.config.ts
.githooks/: pre-commit
aiui-demo/: CLAUDE.md  package.json  vite.config.ts
archive/: README.md  ambient-frames-and-live-reframing.md  browser-extension-intent-tool.md  channel-attachment-path-encoding.md  chrome-devtools-mcp-tab-routing-notes.md  code-reader-proposal.md  code-review-pass2-s1-mirrors.md  code-review-pass2-s2-subsystems.md  code-review-pass2-s3-splits.md  code-review-pass2-s5-dispatch.md  code-review-pass2-smells.md  front_end_controls_guide_and_more.md  gemini-live-capabilities.md  gemini-live-check.py  gemini-live-spike.mjs  ipad_browser_paint_stream_design.md  ipad_browser_paint_stream_plan.md  model-tiers.md  openai-realtime-spike.mjs  plugin-restructure.md  questions.md  realtime_pivot_plan.md  realtime_prompt_linter_design.md  (+5 more)
docs/: desiderata.md  (+2 more)
examples/py-demo/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  setup.sh
examples/py-demo/.aiui/lsp/: manifest.json
examples/py-demo/.aiui/lsp/python/: SETUP.md  launch
examples/py-demo/.aiui/lsp/typescript/: SETUP.md  launch
examples/py-demo/src/pydemo/: __init__.py  __main__.py  geometry.py  mesh.py  pipeline.py  signals.py  stats.py
examples/py-demo/web/: tsconfig.json
examples/py-demo/web/src/: index.ts  mesh.ts  pipeline.ts  signals.ts  vec3.ts
(+515 files in other folders)
