[project]
name = "py-demo"
version = "0.1.0"
description = "A small, cross-referenced numpy project used as a fixture for the aiui code reader."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
]

[project.scripts]
pydemo = "pydemo.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydemo"]

# Point pyright at the uv-managed virtualenv so third-party stubs (numpy) resolve.
[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
pythonVersion = "3.9"
typeCheckingMode = "basic"
